--- a/config.env
+++ b/config.env
@@ -21,19 +21,17 @@ EMAIL_FROM=owaiskahoo@gmail.com
 # heres the test mode stripe keys
 
 
-USER_DEFAULT_PASSWORD=$2a$12$WlJp2zecoeGvupIvg1Gb4eFfN0fxnullcnslokoPeRvecO
-USER_DEFAULT_EMAIL=email@gmail.com
 
 # AWS credentials
-AWS_BUCKET_REGION="eu-north-1"
-AWS_ACCESS_KEY="AKIARWPFIISJLXCF4SPH"
-AWS_SECRET_KEY="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"
+AWS_BUCKET_REGIONS="eu-north-1"
+AWS_ACCESS_KEYS="AKIARWPFIISJLXCF4SPH"
+AWS_SECRET_KEYS="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"
 
 # Development Bucket
 
-AWS_VIDEO_BUCKET_LINK="https://car-development.s3.eu-north-1.amazonaws.com/"
-AWS_USERNAME="car-user"
-AWS_IMAGE_BUCKET_NAME="car-development"
+AWS_VIDEO_BUCKET_LINKS="https://car-development.s3.eu-north-1.amazonaws.com/"
+AWS_USERNAMES="car-user"
+AWS_IMAGE_BUCKET_NAMES="car-development"
 
 
 
