--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node server.ts",
+    "start": "cross-env NODE_ENV=production node dist/server.js",
     "dev": "cross-env NODE_ENV=development nodemon server.ts",
     "build": "tsc -p .",
     "start:prod": "cross-env NODE_ENV=production nodemon ./dist/server.js",
@@ -65,7 +65,7 @@
     "parcel-bundler": "^1.12.3",
     "prettier": "^2.4.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2"
   },
   "engines": {
     "node": "^18"
