--- a/config.env
+++ b/config.env
@@ -13,7 +13,7 @@ JWT_COOKIE_EXPIRES_IN=90
 EMAIL_USERNAME=a124458539192a
 EMAIL_PASSWORD=1e3caf48074eba
 EMAIL_HOST=smtp.mailtrap.io
-EMAIL_PORT=25
+EMAIL_PORT=25ca
 
 # client ID 
 EMAIL_FROM=owaiskahoo@gmail.com
