--- a/package.json
+++ b/package.json
@@ -32,9 +32,8 @@
     "moment": "^2.29.4",
     "multer": "^1.4.2",
     "multer-s3": "^2.10.0",
-    "nodemailer": "^6.6.5",
     "pg": "^8.13.3",
-    "pug": "^3.0.2",
+    "pug": "^3.0.3",
     "reflect-metadata": "^0.2.2",
     "stripe": "^12.5.0",
     "swagger-jsdoc": "^4.0.0",
@@ -48,9 +47,12 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/html-to-text": "^9.0.4",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
+    "@types/nodemailer": "^6.4.17",
+    "@types/pug": "^2.0.10",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.7",
     "@types/uuid": "^10.0.0",
@@ -61,6 +63,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.25.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.10.1",
     "nodemon": "^2.0.22",
     "parcel-bundler": "^1.12.3",
     "prettier": "^2.4.0",
